# mocap_optitrack-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  gbp.conf  rules
include/mocap_optitrack/: mocap_config.h  socket.h
launch/: mocap.launch.py
rpm/: ros-humble-mocap-optitrack.spec  ros-iron-mocap-optitrack.spec  ros-jazzy-mocap-optitrack.spec  ros-noetic-mocap-optitrack.spec  template.spec
src/: mocap_config.cpp  mocap_node.cpp
src/natnet/: natnet_messages.cpp
